examples/datalog/10_edge_cases/86_chained_rules.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_chain
Knowledge graph 'test_chain' created.
Switched to knowledge graph: test_chain
> .kg use test_chain
Switched to knowledge graph: test_chain
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> step1(X, Y) :- base(X), Y = X + 1.
Script error: Query execution failed: Unsafe rule: Atom { relation: "step1", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
